# geometry

./: README.md  pyproject.toml
geometry/: __init__.py  circle.py  shape.py  square.py  triangle.py
tests/: test_circle.py  test_triangle.py
