[project]
name = "geometry"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр Петров",email = "petrov.a.o-86@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
setuptools = "^80.4.0"
coverage = "^7.8.0"
